fix(modal): increase importance of legacy modal class definition
fullscreen modal class overrules the top / left definition of the legacy modals, which results in off-screen rendering of modals in IE11

Closes #134 / Semantic-Org/Semantic-UI#6597

--- a/src/definitions/modules/modal.less
+++ b/src/definitions/modules/modal.less
@@ -311,10 +311,10 @@
 }
 
 /* Resort to margin positioning if legacy */
-.ui.legacy.modal,
-.ui.legacy.page.dimmer > .ui.modal {
-  top: 50%;
-  left: 50%;
+.ui.legacy.legacy.modal,
+.ui.legacy.legacy.page.dimmer > .ui.modal {
+  top: 50% !important;
+  left: 50% !important;
 }
 
 .ui.legacy.page.dimmer > .ui.scrolling.modal,
